# retail_chain

./: .flake8  README.md  pyproject.toml
config/: settings.py  urls.py
retail/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
retail/migrations/: 0001_initial.py  0002_alter_chain_contacts_alter_chain_debt_to_supplier.py  0003_contact_remove_chain_products_chain_products.py  0004_alter_chain_contacts_remove_chain_products_and_more.py  0005_alter_chain_contacts.py  0006_alter_chain_contacts.py  0007_contact_chain_line.py  0008_alter_contact_chain_line.py  0009_chain_is_factory.py  0010_alter_chain_name.py  0011_alter_chain_name.py
users/: models.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_and_more.py  0003_alter_user_is_active.py
